# joby_evtol_simulator

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
include/: Aircraft.h  AircraftConfig.h  AircraftStats.h  ChargerPool.h  Simulator.h  Vehicle.h  VehicleConfig.h
src/: Aircraft.cpp  Simulator.cpp  Vehicle.cpp  main.cpp
tests/: AircraftTests.cpp  CMakeLists.txt  VehicleTest.cpp
